tests/source/floats/invalid/lex/yet_another_bad_constant.c
int main(void) { return 1.e-10fF; }
